# DELi

./: .deli  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  calling_subprocess.py  cube_gen.py  deli_run.py  example_config.toml  match_barcodes.py  matching_subprocess.py  nextflow.nf  pyproject.toml  requirements.txt  sequence_caller.py  todo.md
.github/workflows/: check-docs.yaml  publish-release.yml  pytest.yaml  regenerate-docs-reqs.yml
data/: barcode_makes.json  experiment_index.json  libs.json  libs_to_make.json
data/bb_codes/DEL003/: DEL003_BBA.json  DEL003_BBB.json  DEL003_BBC.json
data/bb_codes/DEL004/: DEL004_BBA.json  DEL004_BBB.json
data/bb_codes/DEL005/: DEL005_BBC.json
data/dorado_config_files/: alignment_seq.fasta  index_arrangement.toml  index_barcodes.fasta
docs/: barcode_scheme.rst  cli_docs.rst  compound_ids.rst  conf.py  config.rst  defining_building_blocks.rst  defining_libraries.rst  deli_glossary.rst  enumerator.rst  index.rst  parallelization.rst  requirements-docs.txt  selection_files.rst
docs/analysis_docs/: analysis_config.rst  analysis_contribute.rst  analysis_readme.rst
docs/api/: deli.configure.rst  deli.decode.rst  deli.dels.rst  deli.rst
docs/config_docs/: deli_config.rst  deli_data_dir.rst
docs/decoding_docs/: algorithm.rst  barcode_calling.rst  decode.rst  decoding_file.rst  decoding_outcomes.rst  decoding_output.rst  decoding_settings.rst  error_correction.rst  run_decode.rst  tool_compounds.rst
docs/defining/: defining_barcode_schema.rst  defining_building_blocks.rst  defining_hamming.rst  defining_libraries.rst
docs/defining_docs/: define.rst  defining_barcode_schema.rst  defining_building_blocks.rst  defining_enumerators.rst  defining_hamming.rst  defining_indexes.rst  defining_libraries.rst  defining_reactions.rst  defining_tool_compounds.rst
docs/development_docs/: faqs.rst  testing.rst
examples/: DEL005_cube_config_sample.yaml  README.md  readme.md
examples/UNCDEL003_53bp1_Analyze/: analysis_config_del3.yaml
examples/UNCDEL006_BRD4_Analyze/: analysis_config_del6.yaml  analysis_parse.py
examples/UNCDEL006_BRD4_Decode/: UNCDEL006_BRD4.fastq  example_decode.yaml
examples/UNCDEL006_Enumerate/: DEL006_A.csv  DEL006_B.csv  DEL006_C.csv  enumerate.py
examples/analysis/example_data/: analysis_config_del3.yaml
examples/example_deli_data_dir/building_blocks/: DEL006_BBA.csv  DEL006_BBB.csv  DEL006_BBC.csv
examples/example_deli_data_dir/libraries/: DEL006.json
nextflow/: decode.py  merge_umi.py  nextflow.config  nextflow.nf  readme.md
scripts/: export_docs_requirements.py
src/deli/: __init__.py  _hamming.py  _logging.py  analysis_config.yaml  analysis_parse.py  analysis_report_gen.py  cli.py  config.ini  configure.py  constants.py  cube_class.py  del_make.py  logger.py  report_test_template.html  scripts.py  selection.py  settings.py  utils.py
src/deli/analysis/: analysis_parse.py  analysis_report_gen.py  cube_class.py  cube_class_full.py  cube_factory.py  family.py  gnn.py  html_report.py  poly_o.py  umi.py
src/deli/backup/: analysis_parse.py  analysis_parse_pre_ini.py
src/deli/base/: __init__.py  _logging.py  configure.py  runners.py  selection.py  settings.py  statistics.py
src/deli/config/: __init__.py  configure.py  deli_data_dir.py  parsing.py  settings.py
src/deli/cube/: __init__.py  cubify.py  format.py
src/deli/decode/: __init__.py  _base.py  barcode_calling.py  base.py  bb_calling.py  called.py  calls.py  count.py  decoder.py  degen.py  demultiplex.py  experiment.py  lib_calling.py  library_demultiplex.py  match.py  report.py  runner.py  settings.py  statistics.py  stats.py  umi.py
src/deli/dels/: __init__.py  _base.py  barcode.py  base.py  building_block.py  combinatorial.py  compound.py  configure.py  enumerated.py  enumerator.py  exceptions.py  index.py  library.py  linker.py  member.py  parsing.py  reaction.py  selection.py  synthon.py  tool_compound.py  tool_compounds.py  umi.py
src/deli/design/: __init__.py  hamming.py  tag.py  tag_factory.py
src/deli/dna/: __init__.py  align.py  io.py
src/deli/enumeration/: enumerator.py  reaction.py
src/deli/example_data/: analysis_config_del3.yaml  control.txt  index.txt
src/deli/logging/: __init__.py
src/deli/processing/: __init__.py  called.py  experiment.py  hamming.py  match.py
src/deli/runners/: aggregation.py  decode.py
src/deli/sample_data_1/: analysis_config_del3.yaml
src/deli/sequence/: __init__.py  align.py  fasta.py  multiplex.py  tag.py  tag_factory.py  utils.py
src/deli/templates/: analysis_report.html  decode_report.html
src/deli/tmp_DEL6_files/: building_block_a.json  building_block_b.json  building_block_c.json  del6.json
src/deli/utils/: __init__.py  distance_utils.py  mol_utils.py
templates/: decode_report.html  report.html
tests/: conftest.py  test_analysis.py  test_analysis_gnn.py  test_barcode.py  test_building_block.py  test_cli.py  test_compound.py  test_cube.py  test_decode.py  test_deli_data_dir.py  test_dna_io.py  test_enumerator.py  test_error_correction.py  test_library.py  test_reaction.ipynb  test_reaction.py  test_tool_compounds.py
tests/data/: .deli  collected_decodes.ndjson  example_decode.yaml  example_decoded.tsv
tests/data/analysis/: minimal_config.yaml  (+1 more)
tests/test_cube/: test_count.py
tests/test_data/: .barcode_sections.json  .deli  16_11_bit_map.txt  8_4.txt  8_4_bit_map.txt  bb_simple.csv  bb_tagged.csv  exampe_index.json  example.fastq  example_building_block_set.csv  example_decode.yaml  example_decode_error_correction.yaml  example_decode_error_correction_asym.yaml  example_decode_error_correction_disable.yaml  example_decode_no_seqs.yaml  example_enumerator.json  example_library.json  example_mega_lib.json  example_schema.json  my_experiment.txt  my_experiment.yaml
tests/test_decode/: test_count.py  test_decode.py  test_error_correction.py
tests/test_dels/: test_barcode.py  test_building_block.py  test_compound.py  test_library.py  test_tool_compounds.py
tests/test_enumeration/: test_enumerator.py  test_reaction.py
(+79 files in other folders)
