[project]
name = "deli"
version = "1.0.0"
authors = [
    { name = "James Wellnitz", email = "wellnitz.james@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "click>=8.3.1",
    "cutadapt>=5.2",
    "dnaio>=1.2.3",
    "jinja2>=3.1.6",
    "levenshtein>=0.27.3",
    "numba>=0.63.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.5",
    "regex>=2026.1.15",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
