[project]
name = "deli-chem"
version = "0.2.0"
description = "DNA encoded library sequence analysis software with custom library design support"
readme = "README.md"
license = "MIT"
authors = [
  { name = "James Wellnitz", email = "wellnitz.james@gmail.com" },
  { name = "Brandon Novy", email = "novy@unc.edu" },
  { name = "Travis Maxfield" },
  { name = "Jason Lin" }
]
maintainers = [
  { name = "James Wellnitz", email = "wellnitz.james@gmail.com" }
]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License"
]
keywords = [
  "DNA-encoded library",
  "DEL",
  "cheminformatics",
  "bioinformatics",
  "drug discovery"
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "click>=8.3.1",
    "cutadapt>=5.2",
    "dnaio>=1.2.3",
    "jinja2>=3.1.6",
    "levenshtein>=0.27.3",
    "numba>=0.63.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.5",
    "regex>=2026.1.15",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "deli"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Popov-Lab-UNC/DELi"
Repository = "https://github.com/Popov-Lab-UNC/DELi"
Issues = "https://github.com/Popov-Lab-UNC/DELi/issues"

[project.scripts]
deli = "deli.cli:cli"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.mypy]
files = ["src"]
exclude = "src/deli/cli.py|tests"

[tool.ruff]
lint.select = [
    "F",
    "E",
    "W",
    "I001",
    "I002",
    "B",
    "D"
]
lint.ignore = [
    "D400",
    "D401",
    "D200"
]
src = ["src", "tests"]
line-length = 120
exclude = ["scripts/", "docs/", "tests/data/"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
